[metadata]
name = lfiax
version = attr: lfiax.__version__
license = MIT
license_files = LICENSE
# url = https://github.com/huilab/sbiDOEMAN
author = Vincent Zaballa
author_email = vzaballa@uci.edu
keywords = conditional normalizing flows jax likelihood free simulation based inference
description = Conditional normalizing flows jax package for likelihood free inference
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
install_requires =
    numpy
    jax
    jupyter
    distrax
    dm-haiku
    optax
    tensorflow
    tensorflow_datasets
setup_requires =
    setuptools
package_dir =
    = src
packages = find:
python_requires =
    >=3.7

[options.extras_require]
dev = twine
test = pytest

[options.packages.find]
where = src
include = lfiax*

[bdist_wheel]
universal = 0
